<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="32dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signUp_button_return"
                android:layout_width="126dp"
                android:layout_height="32dp"
                android:text="@string/label_return"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/label_account" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUp_input_accountName"
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:background="@drawable/text_frame"
                android:gravity="start"></com.google.android.material.textfield.TextInputEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/label_passWord" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_input_passWord"
                    android:layout_width="220dp"
                    android:layout_height="30dp"
                    android:background="@drawable/text_frame"
                    android:gravity="start"></com.google.android.material.textfield.TextInputEditText>
            </LinearLayout>

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:text="@string/msg_M009" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:text="@string/msg_M010" />

            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/label_passWord" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_input_passWord2"
                    android:layout_width="220dp"
                    android:layout_height="30dp"
                    android:background="@drawable/text_frame"
                    android:gravity="start"></com.google.android.material.textfield.TextInputEditText>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:text="@string/lable_mailAddress" />

            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_input_mailAddress"
                    android:layout_width="370dp"
                    android:layout_height="30dp"
                    android:background="@drawable/text_frame"
                    android:gravity="start"></com.google.android.material.textfield.TextInputEditText>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="94dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/msg_M027" />
            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:text="@string/lable_mailAddress" />
            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_input_mailAddress2"
                    android:layout_width="370dp"
                    android:layout_height="30dp"
                    android:background="@drawable/text_frame"
                    android:gravity="start"></com.google.android.material.textfield.TextInputEditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="96dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="370dp"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_secretQuestion" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_M022" />
            </LinearLayout>

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:text="@string/msg_M023" />

            <Spinner
                android:id="@+id/signUp_input_secretQuestion"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:background="#F8EED1" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="370dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="118dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:text="@string/msg_M024" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUp_input_answerForSecretQuestion"
                android:layout_width="370dp"
                android:layout_height="79dp"
                android:background="@drawable/text_frame"
                android:gravity="start"
                android:hint="hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="250dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:text="@string/label_selfProfile" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUp_input_profile"
                android:layout_width="370dp"
                android:layout_height="198dp"
                android:background="@drawable/text_frame"
                android:gravity="start"
                android:hint="hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="32dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signUp_button_confirm"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:text="@string/label_confirm"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>