<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/resetPassWord_button_return"
        android:layout_width="126dp"
        android:layout_height="32dp"
        android:text="@string/label_return"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />


    <TextView
        android:id="@+id/resetPassWord_label_message1"
        android:layout_width="371dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="296dp"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21">

        <LinearLayout
            android:layout_width="364dp"
            android:layout_height="67dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="127dp">

            <TextView
                android:layout_width="122dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:text="@string/label_passWordColon"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.233" />

            <EditText
                android:id="@+id/resetPassWord_input_passWord"
                android:layout_width="210dp"
                android:layout_height="45dp"
                android:background="@drawable/text_frame"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/msg_M009" />

        <LinearLayout
            android:layout_width="364dp"
            android:layout_height="67dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="127dp">

            <TextView
                android:layout_width="122dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:text="@string/label_passWordColon"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.315" />

            <EditText
                android:id="@+id/resetPassWord_input_passWord2"
                android:layout_width="210dp"
                android:layout_height="45dp"
                android:background="@drawable/text_frame"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.315" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/msg_M010" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="32dp"
        android:gravity="right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958">

        <Button
            android:id="@+id/resetPassWord_button_confirm"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:text="@string/label_confirm"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>