<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="172dp"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425">

        <Button
            android:id="@+id/button_login"
            android:layout_width="129dp"
            android:layout_height="63dp"
            android:text="@string/label_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.637" />

        <Button
            android:id="@+id/login_button_signUp"
            android:layout_width="129dp"
            android:layout_height="63dp"
            android:text="@string/label_signUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.751"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.637" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_label_message1"
        android:layout_width="394dp"
        android:layout_height="67dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_link_reIssuePassWord"
        android:layout_width="245dp"
        android:layout_height="26dp"
        android:clickable="true"
        android:text="@string/link_reIssuePassWord"
        android:textColor="@drawable/link_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <TextView
        android:id="@+id/login_link_inquire"
        android:layout_width="245dp"
        android:layout_height="26dp"
        android:clickable="true"
        android:onClick="goInquire"
        android:text="@string/link_inquire"
        android:textColor="@drawable/link_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />


    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="172dp"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017">

        <LinearLayout
            android:layout_width="364dp"
            android:layout_height="67dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="127dp">

            <TextView
                android:id="@+id/login_label_userId"
                android:layout_width="122dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:text="@string/label_userIdColon"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.233" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_userId"
                android:layout_width="210dp"
                android:layout_height="45dp"
                android:background="@drawable/text_frame"
                android:hint="hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.233" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="364dp"
            android:layout_height="67dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="127dp">

            <TextView
                android:id="@+id/login_label_passWord"
                android:layout_width="122dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:text="@string/label_passWordColon"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.315" />

            <EditText
                android:id="@+id/login_input_passWord"
                android:layout_width="210dp"
                android:layout_height="45dp"
                android:background="@drawable/text_frame"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.315" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>